--- a/Client/src/pages/ApplicationProject/ApplicationProject.css
+++ b/Client/src/pages/ApplicationProject/ApplicationProject.css
@@ -1,4 +1,4 @@
-.ApproveProject {
+.ApplicationProject {
   display: grid;
   grid-template-rows: min-content 1fr;
   width: 100%;
@@ -7,25 +7,25 @@
   height: calc(100vh - 6rem);
 }
 
-.ApproveProject > div:nth-child(1) > h3 {
+.ApplicationProject > div:nth-child(1) > h3 {
   font-size: 3rem;
   font-weight: bold;
 }
 
-.ApproveProject > div:nth-child(1) > h1 {
+.ApplicationProject > div:nth-child(1) > h1 {
   font-size: 6rem;
   font-weight: bolder;
   margin-bottom: 2rem;
 }
 
-.ApproveProject > div:nth-child(2) {
+.ApplicationProject > div:nth-child(2) {
   display: grid;
   padding-top: 2rem;
   gap: 2rem;
   grid-template-columns: 40% 1fr;
 }
 
-.ApproveProject > div:nth-child(2) > div:nth-child(1) {
+.ApplicationProject > div:nth-child(2) > div:nth-child(1) {
   display: grid;
   gap: 2rem;
   align-items: stretch;
@@ -33,7 +33,7 @@
   grid-template-rows: 1fr;
 }
 
-.ApproveProject > div:nth-child(2) > div:nth-child(1) > textarea {
+.ApplicationProject > div:nth-child(2) > div:nth-child(1) > textarea {
   width: 100%;
   border: 0;
   background-color: #F5F5F5;
@@ -44,17 +44,17 @@
   padding: 1rem;
 }
 
-.ApproveProject > div:nth-child(2) > div:nth-child(2) {
+.ApplicationProject > div:nth-child(2) > div:nth-child(2) {
   display: grid;
   grid-template-rows: min-content auto min-content;
 }
 
-.ApproveProject > div:nth-child(2) > div:nth-child(2) > h2 {
+.ApplicationProject > div:nth-child(2) > div:nth-child(2) > h2 {
   font-size: 2.5rem;
   font-weight: bold;
 }
 
-.ApproveProject > div:nth-child(2) > div:nth-child(2) > div {
+.ApplicationProject > div:nth-child(2) > div:nth-child(2) > div {
   display: flex;
   align-items: baseline;
   flex-wrap: wrap;
@@ -64,7 +64,7 @@
   gap: 1rem 2rem;
 }
 
-.ApproveProject > div:nth-child(2) > div:nth-child(2) > div > * {
+.ApplicationProject > div:nth-child(2) > div:nth-child(2) > div > * {
   background-color: #F5F5F5;
   padding: .4rem 2rem;
   font-size: large;
@@ -72,13 +72,13 @@
   border-radius: 50px;
 }
 
-.ApproveProject > div:nth-child(2) > div:nth-child(2) > div > button {
+.ApplicationProject > div:nth-child(2) > div:nth-child(2) > div > button {
   background-color: transparent;
   text-align: center;
   font-size: 2rem;
 }
 
-.ApproveProject > div:nth-child(2) > div:nth-child(2) > button {
+.ApplicationProject > div:nth-child(2) > div:nth-child(2) > button {
   justify-self: start;
   margin-left: 3rem;
   margin-bottom: 3rem;
