--- a/Client/src/component/Footer/Footer.css
+++ b/Client/src/component/Footer/Footer.css
@@ -1,13 +1,12 @@
 .Footer {
+  left: 0;
+  width: 100%;
+  height: 5rem;
+  margin-top: 40px;
+  color: white;
+  background-color: rgb(30, 30, 31);
+  font-size: 1.2rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  
-  width: 100%;
-  height: 12rem;
-
-  color: white;
-  background-color: black;
-
-  font-size: 3rem;
 }
