--- a/Client/src/component/NavBar/NavBar.css
+++ b/Client/src/component/NavBar/NavBar.css
@@ -29,6 +29,6 @@
   display: flex;
   flex-direction: row;
   justify-content: end;
-
-  font-size: 1.3rem;
+  font-family: "Inter";
+  font-size: 1rem;
 }
