--- a/Client/src/pages/CreateProject/CreateProject.css
+++ b/Client/src/pages/CreateProject/CreateProject.css
@@ -13,8 +13,14 @@
   padding: 1rem;
   font-size: large;
   background-color: #F5F5F5;
-  border-left: 1px solid black;
+  border-left: 2px solid black;
 }
+
+.inputfocus:focus {
+  outline-width: 0;
+  border-left: 4px solid rgb(57, 26, 72);
+}
+
 
 .CreateProject > div {
   display: grid;
@@ -25,7 +31,7 @@
 
 .CreateProject > div > div:nth-child(1) {
   display: grid;
-  gap: 2rem;
+  gap: 1rem;
   align-items: stretch;
   justify-content: stretch;
   grid-template-rows: 1fr 1fr;
@@ -35,12 +41,18 @@
   width: 100%;
   border: 0;
   background-color: #F5F5F5;
-  border-left: 1px solid black;
+  border-left: 2px solid black;
   font-size: large;
   height: 100%;
   resize: none;
   padding: 1rem;
 }
+
+.CreateProject > div > div:nth-child(1) > textarea:focus {
+  outline-width: 0;
+  border-left: 4px solid rgb(57, 26, 72);
+}
+
 
 .CreateProject > div > div:nth-child(2) {
   display: grid;
@@ -48,8 +60,9 @@
 }
 
 .CreateProject > div > div:nth-child(2) > h2 {
-  font-size: 2.5rem;
+  font-size: 2.2rem;
   font-weight: bold;
+  margin-bottom: 30px;
 }
 
 .CreateProject > div > div:nth-child(2) > div {
@@ -62,9 +75,15 @@
   gap: 1rem 2rem;
 }
 
+.SkillSet{
+  margin-bottom: 70px;
+}
+
 .CreateProject > div > div:nth-child(2) > div > * {
   background-color: #F5F5F5;
   padding: .4rem 2rem;
+  margin-bottom: 0;
+  margin-top: 0;
   font-size: large;
   border: 0;
   border-radius: 50px;
@@ -73,19 +92,28 @@
 .CreateProject > div > div:nth-child(2) > div > button {
   background-color: transparent;
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.3rem;
+  margin: 8px 4px 0px -10px;
+  background-color: transparent;  
+  border-radius: 15px;
+  border: 4px solid black;
 }
 
 .CreateProject > div > div:nth-child(2) > button {
   justify-self: start;
-  margin-left: 3rem;
-  margin-bottom: 3rem;
-  font-size: xx-large;
-  border: 6px black solid;
+  font-size: x-large;
+  background-color: #B485FF;
   border-radius: 15px;
-  padding: .3rem 3rem;
+  padding: .2rem 2rem;
   background-color: transparent;
   position: relative;
+}
+
+.ButtonHighlight{
+  background-color: #B485FF;
+  border-radius: 15px;
+  padding: 0px 8px 0px 0px;
+  margin-left: 8px;  
 }
 
 /* TODO: It is broken, need fix  */
