Projects ready module and page. Fonts added

--- a/Client/src/pages/CreateProject/CreateProject.css
+++ b/Client/src/pages/CreateProject/CreateProject.css
@@ -89,6 +89,10 @@
   border-radius: 50px;
 }
 
+.pointer{
+  cursor: pointer;
+}
+
 .CreateProject > div > div:nth-child(2) > div > button {
   background-color: transparent;
   text-align: center;
