--- a/Client/src/pages/Projects/Projects.css
+++ b/Client/src/pages/Projects/Projects.css
@@ -3,8 +3,8 @@
     
 } */
 
-.Projects {
-  padding: 4rem;
+.Projects{
+  padding: 3rem;
 }
 
 .span{
@@ -26,10 +26,13 @@ h1{
 }
 
 h2{
-  font-family: "Inter";
-  font-weight: 800;
-  font-size: 2.2rem;
-  margin: 0px 0px 15px 0px;
+  margin-bottom: 50px;
+}
+
+
+.imgball{
+  width: 6rem;
+  margin-bottom: 20px;
 }
 
 .basic-p{
@@ -37,7 +40,9 @@ h2{
   font-size: 1.3rem;
   line-height: 1.3;
   margin-bottom: 5px;
+  width: fit-content;
 }
+
 h3{
   font-family: "Inter";
   font-weight: 500;
@@ -50,6 +55,7 @@ h3{
   font-size: 3rem;    
   margin: 0;
   padding: 0;
+  width: fit-content;
 
 }
 
@@ -78,6 +84,7 @@ h3{
   display: grid;
   grid-column-gap: 30px;
   grid-template-columns: 1fr 31fr auto;
+  max-width: 100%;
   /* justify-content: space-between; */
   /* grid-template-columns: repeat(auto-fit, minmax(100px, auto)); */
 }
@@ -97,6 +104,7 @@ h3{
   text-align: center;
   height: 100%;
   padding-left: 20px;
+  width: 10rem;
 } 
 
 .list-div-desc{
@@ -105,11 +113,10 @@ h3{
   height: 100%;
   padding-left: 2%;
   padding-right: 2%;
-  
-  text-align: center;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  align-items: left;
+  flex-direction: column;
+  text-align: left;
 }
 
 
@@ -161,5 +168,124 @@ h3{
 
 .list-row:hover {
   cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  filter: drop-shadow(rgba(0, 0, 0, 0.071) 0rem 1px 10px);
+}
+
+body{
+  padding: 0px;
+  margin: 0px;
+  font-family: "Jura";
+  height: 100%;
+  background-color: #ffffff;
+}
+
+.info_input{
+  width: 75%;
+  padding: 5px; 
+  border: 0px; 
+  border-left: .1rem solid;
+  background-color: #F5F5F5;
+  font-family: "Jura";
+  font-size: 1.2rem;
+  line-height: 1.3;
+  margin-bottom: 5px;
+  min-height: 400px;
+  max-height: 400px;
+  overflow: scroll;
+}
+
+.info_input:focus-within{
+  outline: none;
+}
+
+.bodydiv{
+  padding: 1rem 2rem 1rem 2rem;
+}
+.wide{
+  min-width: 220px;
+}
+
+.module-popup-div{ 
+  padding: 3rem;
+  background-color: #ffffff;
+  margin: auto;
+  margin-top: 2.5%;
+  margin-bottom: 2.5%;
+  width: 900px;
+  height: 500px;
+}
+.module-popup-div h3{
+  font-size: 1.6rem;    
+}
+
+.module-cross{
+  margin-left: auto;
+  padding-top: 1rem;
+  margin-right: 1rem;
+  width:10px;
+  height:10px;
+  cursor: pointer;
+}
+
+.module-popup-left{
+  display: inline-block;
+  width: 100%;
+}
+
+.module-popup-right{
+  display: inline-block;
+  vertical-align:top;
+  height: 100%;
+  padding: 0 2.5% 0 2.5%;
+  margin-top: 40px;
+  width: 45%;
+}
+
+.purple-button-div{
+  margin-top: 2rem;
+  background-color: #B485FF;
+  border-radius: 10px;
+  width: fit-content;
+}
+
+.purple-button-but{
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 1.2rem;
+  background-color: transparent;
+  padding: 5px 20px 5px 20px;
+  border-radius: 10px;
+  margin: -5px -5px 0px 0px;
+}
+
+
+.skillblock{
+  display: inline-block;
+  color: black;
+  background-color: #D9D9D9;
+  padding: 5px 20px 5px 20px; 
+  width: fit-content;
+  border-radius: 50px;
+  font-size: 1.2rem;
+  margin: 5px 3px 5px 3px;
+}
+
+.haveit{
+  background-color: #B485FF;
+}
+
+.basic-button{
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 1rem;
+  background-color: transparent;
+  border-radius: 7px;
+  border-width: 0px;
+  height: 2.4rem;
+  color: #ffffff;
+}
+
+.imageperson{
+  width: 25%;
+  margin-bottom: 20px;
 }
